--- a/doc/main.tex
+++ b/doc/main.tex
@@ -304,6 +304,12 @@ in a very short period of time. Moreover, the decomposition method, considering
 the high number of experiments of the second part, is able to obtain similar
 results in an even shorter period of time thanks to the early stopping algorithm.
 
+Of course, the results of the experiments slightly change depending on the
+initial value of the weights, which are set up randomly.
+For the last experiment, the early stopping
+technique is often activated much later; here, the introduction of a validation set
+could easily make the the early stopping rule more efficient and reliable.
+
 \begin{table}
 	%\setlength\tabcolsep{1.5pt}
 	\footnotesize
