report minor fix

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -264,7 +264,7 @@ is found in around 0.001s.
 \section{Decomposition Method}
 As already introduced before, this section describes the results obtained by a
 neural network trained using the two block decomposition method.
-More in details, the network is a full RBFN built using the best hyperparameters
+More in details, the network is a RBFN built using the best hyperparameters
 found in the first section, where a full minimization method is used.
 Here the centers and the output layer weights are updated alternatively in two consequent steps.
 
